# OptiX-test2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bck  CMakeLists.txt.cuda_compile_ptx  Makefile  README.md  config.h.in  go.sh  logs
CMake/: nvcuda_compile_ptx.cmake
cuda/: PerRayData_pathtrace.h  camera_viewer.cu  gen_cherenkov.cu  medium_dom.cu  point_source.cu  simple_dom.cu  sphere.cu
include/: cherenkov_step.h  error_check.h  geo_configure.h  geo_configure.hh  geo_create.hh  read_PTX.h  read_PTX.hh  rotateUz.h
src/: error_check.cc  geo_create.cc  main.cc  read_PTX.cc  test_geometry.cc
